# WaveEngine

./: .gitignore  README.md  README_SHADER.md  index.html
Audio/WwiseProject/MusicEngine/: MusicEngine.wproj
Audio/WwiseProject/MusicEngine/Attenuations/: Default Work Unit.wwu
Audio/WwiseProject/MusicEngine/Busses/: Default Work Unit.wwu
Audio/WwiseProject/MusicEngine/Containers/: Default Work Unit.wwu
Audio/WwiseProject/MusicEngine/Control Surface Sessions/: Default Work Unit.wwu
Audio/WwiseProject/MusicEngine/Conversion Settings/: Default Work Unit.wwu
Engine/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Cambios.txt  vcpkg.json
Engine/Assets/: Tank.prefab  Tank_0.prefab  WwiseProject drecera.lnk
Engine/Assets/Audio/GeneratedSoundBanks/: Init.json  Init.txt  MainSoundBank.bnk  MainSoundBank.json  MainSoundBank.txt  PlatformInfo.json  ProjectInfo.json  Wwise_IDs.h
Engine/Assets/Audio/GeneratedSoundBanks/Windows/: Init.bnk  Init.json  Init.txt  MainSoundBank.bnk  MainSoundBank.json  MainSoundBank.txt  PlatformInfo.json
Engine/Assets/Audio/WwiseProject/: WwiseProject.wproj  WwiseProject2.wproj
Engine/Assets/Audio/WwiseProject/.cache/32/: {32EC0120-CD79-3D90-2C8D-16E7DE4CE51D}.wem
Engine/Assets/Audio/WwiseProject/.cache/6F/: {6FFED91B-85CF-803A-A473-161055E2E976}.wem
Engine/Assets/Audio/WwiseProject/.cache/LMDB/: data.mdb  lock.mdb
Engine/Assets/Audio/WwiseProject/Attenuations/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Busses/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Containers/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Control Surface Sessions/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Conversion Settings/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Devices/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Dynamic Dialogue/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Effects/: Default Work Unit.wwu  Factory Effects.wwu
Engine/Assets/Audio/WwiseProject/Events/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Game Parameters/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/GeneratedSoundBanks/: ProjectInfo.json  Wwise_IDs.h
Engine/Assets/Audio/WwiseProject/GeneratedSoundBanks/Windows/: Init.bnk  Init.json  Init.txt  MainSoundBank.json  MainSoundBank.txt
Engine/Assets/Audio/WwiseProject/Metadata/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Mixing Sessions/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Modulators/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Presets/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Queries/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Sidechain Mixes/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/SoundBanks/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Soundcaster Sessions/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/States/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Switches/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Triggers/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject/Virtual Acoustics/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject2/Attenuations/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject2/Busses/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject2/Containers/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject2/Events/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject2/Game Parameters/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject2/SoundBanks/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject2/States/: Default Work Unit.wwu
Engine/Assets/Audio/WwiseProject2/Switches/: Default Work Unit.wwu
Engine/Assets/AudioDemo/: Tunnel.dae  Tunnel.fbx  radio.fbx
Engine/Assets/BakerHouse/: BakerHouse.fbx
Engine/Assets/Gameplay/: Antorcha.fbx  Columna_Entera.fbx  Poste_Madera.fbx
Engine/Assets/Player/: IdleMC.fbx  WalkMC (1).fbx  toonlink.fbx
Engine/Assets/Player/Telemachus/: IdleMC.fbx  WalkMC.fbx
Engine/Assets/Prefabs/: Player.prefab
Engine/Assets/Scripts/: Bullet.lua  CamController.lua  CameraExtras.lua  GamepadExample.lua  MenuManager.lua  PlayerController.lua  Tank.lua  Tank.prefab  TankBase.lua  TankController.lua  TestAnimationMutant.lua  TestScript.lua  Turret.lua  test.lua
Engine/Assets/Shaders/: BlinnPhong.glsl  test.frag  test.vert  water.frag  water.vert
Engine/Assets/Tank/: Tank.fbx
Engine/Assets/Tanks/: Bullet.prefab
Engine/Assets/UI/: HUD.xaml  LoseMenu.xaml  Main.xaml  MainHUD.xaml  MainMenu.noesis  MainMenu.xaml  PauseMenu.xaml  Resources.xaml
Engine/Motor2025_Shader_Delivery/Release/Assets/Pruebas/: CannonFBX.fbx  LondonHouseFBX.fbx
Engine/Motor2025_Shader_Delivery/Release/Assets/Shaders/: water.vert
Engine/Scene/: AnimationTest.json  AnimationTest2.json  Audio_Test.json  EditorPreferences.json  Level1.json  Level1aux.json  MainExecutableTest.json  PlayerTest_Scene.json  SceneFinalScripting.json  SceneFinalScripting1.json  Shaders_scene.json  Smoke.json  TankScene.json  Test.json  TestExecutableAnim.json  Test_Physics-Executable.json  UI-NoesisGUI-Test.json  VerticalSlice1.json  audioDemo.json  kai-scene.json  particulas.json  scene.json  test2.json  test3.json
Engine/Scene/Editor Layout/: editor_layout.ini  editor_layout_default.ini
Engine/src/: AABB.h  AnimationImporter.cpp  AnimationImporter.h  Application.cpp  Application.h  AssetsWindow.cpp  AssetsWindow.h  AudioComponent.h  AudioListener.cpp  AudioListener.h  AudioSource.cpp  AudioSource.h  AudioSystem.cpp  AudioSystem.h  AudioUtility.h  Backup.cpp  Backup.h  BoxCollider.cpp  BoxCollider.h  Camera.cpp  Camera.h  CameraLens.cpp  CameraLens.h  CapsuleCollider.cpp  CapsuleCollider.h  Collider.cpp  Collider.h  CommandHistory.h  Component.cpp  Component.h  ComponentAnimation.cpp  ComponentAnimation.h  ComponentAudioListener.cpp  ComponentAudioListener.h  ComponentAudioSource.cpp  ComponentAudioSource.h  ComponentBoxCollider.cpp  ComponentBoxCollider.h  ComponentCamera.cpp  ComponentCamera.h  (+228 more)
(+26 files in other folders)
