cmake_minimum_required(VERSION 3.10)

project(Engine)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_definitions(-DNOMINMAX)

find_package(SDL3 CONFIG REQUIRED)
find_package(glad CONFIG REQUIRED)
find_package(glm CONFIG REQUIRED)
find_package(assimp CONFIG REQUIRED)
find_package(DevIL REQUIRED)
find_package(imgui REQUIRED)
find_package(imguizmo CONFIG REQUIRED)
find_package(nlohmann_json CONFIG REQUIRED)
find_package(Tracy CONFIG REQUIRED)
find_package(Lua REQUIRED)

set(CORE_SRC 
    src/Main.cpp 
    src/Application.cpp
    src/Application.h
    src/Input.cpp
    src/Input.h 
    src/Module.h 
    src/Window.cpp 
    src/Window.h
)

set(RENDERING_SRC 
    src/Camera.h 
    src/Camera.cpp
    src/Primitives.cpp 
    src/Primitives.h 
    src/RenderContext.h 
    src/RenderContext.cpp 
    src/Renderer.h 
    src/Renderer.cpp 
    src/Shaders.h 
    src/Shaders.cpp 
    src/Frustum.h 
    src/Frustum.cpp 
)

set(VFX_SRC
    src/ParticleSystem.h
    src/ParticleSystem.cpp
)

set(AUDIO_SRC
    src/ModuleAudio.h
    src/ModuleAudio.cpp
    src/AudioSystem.h
    src/AudioSystem.cpp
    src/AudioUtility.h
)

set(UTILS_SRC 
    src/Globals.h 
    src/Log.cpp 
    src/Log.h 
    src/Time.cpp 
    src/Time.h 
    src/Grid.cpp
    src/Grid.h
    src/ModuleCamera.cpp 
    src/ModuleCamera.h 
    src/SelectionManager.h
    src/SelectionManager.cpp
    src/Octree.h
    src/Octree.cpp
)

set(GAMEOBJECTS_SRC 
    src/GameObject.cpp 
    src/GameObject.h 
    src/ModuleScene.cpp 
    src/ModuleScene.h 
)

set(COMPONENTS_SRC
    src/Component.h
    src/Component.cpp
    src/ComponentMaterial.cpp
    src/ComponentMaterial.h
    src/ComponentMesh.h
    src/ComponentMesh.cpp
    src/Transform.cpp
    src/Transform.h
    src/ComponentCamera.cpp
    src/ComponentCamera.h
    src/ComponentRotate.cpp
    src/ComponentRotate.h
    src/ComponentParticleSystem.h
    src/ComponentParticleSystem.cpp
    src/AudioComponent.h
    src/AudioSource.h
    src/AudioSource.cpp
    src/AudioListener.h
    src/AudioListener.cpp
    src/ReverbZone.h
    src/ReverbZone.cpp
)

set(LOADERS_SRC 
    src/Texture.h 
    src/Texture.cpp  
    src/FileSystem.h  
    src/FileSystem.cpp 
)

set(EDITOR_SRC 
    src/ModuleEditor.h
    src/ModuleEditor.cpp 
    src/SceneWindow.h
    src/SceneWindow.cpp 
    src/EditorWindow.h 
    src/ConfigurationWindow.h
    src/ConfigurationWindow.cpp 
    src/ConsoleWindow.h
    src/ConsoleWindow.cpp 
    src/HierarchyWindow.h
    src/HierarchyWindow.cpp 
    src/InspectorWindow.h
    src/InspectorWindow.cpp 
    src/GameWindow.h
    src/GameWindow.cpp
    src/AssetsWindow.h
    src/AssetsWindow.cpp 
    src/ImportSettingsWindow.h
    src/ImportSettingsWindow.cpp 
)

set(IMPORTERS_SRC 
    src/MeshImporter.cpp 
    src/MeshImporter.h 
    src/LibraryManager.cpp 
    src/LibraryManager.h 
    src/MetaFile.cpp 
    src/MetaFile.h 
    src/TextureImporter.cpp 
    src/TextureImporter.h 
    src/ModuleResources.cpp 
    src/ModuleResources.h 
    src/ResourceMesh.cpp 
    src/ResourceMesh.h 
    src/ResourceTexture.cpp 
    src/ResourceTexture.h 
)

set(SCRIPTING_SRC 
    src/ScriptManager.h
    src/ScriptManager.cpp
    src/ResourceScript.h
    src/ResourceScript.cpp
    src/ComponentScript.h
    src/ComponentScript.cpp
    src/ScriptEditorWindow.h
    src/ScriptEditorWindow.cpp
    src/EditorPreferences.h
    src/EditorPreferences.cpp
    src/Prefab.h
    src/Prefab.cpp
    src/PrefabManager.h
    src/PrefabManager.cpp
    src/ResourcePrefab.h
    src/ResourcePrefab.cpp
    src/TextEditor.h
    src/TextEditor.cpp
)




source_group("Source\\Core" FILES ${CORE_SRC})
source_group("Source\\Rendering" FILES ${RENDERING_SRC})
source_group("Source\\Rendering\\VFX" FILES ${VFX_SRC})
source_group("Source\\Audio" FILES ${AUDIO_SRC})
source_group("Source\\Utils" FILES ${UTILS_SRC})
source_group("Source\\Utils\\Editor" FILES ${EDITOR_SRC})
source_group("Source\\Game Objects" FILES ${GAMEOBJECTS_SRC})
source_group("Source\\Game Objects\\Components" FILES ${COMPONENTS_SRC})
source_group("Source\\Loaders" FILES ${LOADERS_SRC})
source_group("Source\\Loaders\\Importers" FILES ${IMPORTERS_SRC})
source_group("Scripting" FILES ${SCRIPTING_SRC})


set(SRCS ${CORE_SRC} ${RENDERING_SRC} ${VFX_SRC} ${AUDIO_SRC} ${UTILS_SRC} ${EDITOR_SRC} ${GAMEOBJECTS_SRC} ${COMPONENTS_SRC} ${LOADERS_SRC} ${IMPORTERS_SRC} ${SCRIPTING_SRC})

add_executable(Engine ${SRCS})

target_link_libraries(Engine PRIVATE SDL3::SDL3)
target_link_libraries(Engine PRIVATE glad::glad)
target_link_libraries(Engine PRIVATE glm::glm)
target_link_libraries(Engine PRIVATE assimp::assimp)
target_link_libraries(Engine PRIVATE DevIL::IL)
target_link_libraries(Engine PRIVATE DevIL::ILU)
target_link_libraries(Engine PRIVATE imgui::imgui)
target_link_libraries(Engine PRIVATE imguizmo::imguizmo)
target_link_libraries(Engine PRIVATE nlohmann_json::nlohmann_json)
target_link_libraries(Engine PRIVATE Tracy::TracyClient)
target_link_libraries(Engine PRIVATE ${LUA_LIBRARIES})
target_include_directories(Engine PRIVATE ${LUA_INCLUDE_DIR})




# ============= WWISE AUTO-DOWNLOAD =============
set(WWISE_SDK_DIR "${CMAKE_CURRENT_SOURCE_DIR}/External/Wwise/SDK")

# Check if Wwise libs exist (check soundengine file as indicator)
if(NOT EXISTS "${WWISE_SDK_DIR}/x64_vc170/Debug/lib/AkSoundEngine.lib")
    message(STATUS "Wwise SDK not found. Downloading...")
    
    file(DOWNLOAD 
        "https://dl.dropboxusercontent.com/scl/fi/92fdn4rhlc3eim2a5p0ox/wwise_sdk.zip?rlkey=nob090idq4yw0h6v2ehpa7j6t&dl=1"
        "${CMAKE_BINARY_DIR}/wwise_sdk.zip"
        SHOW_PROGRESS
        STATUS DOWNLOAD_STATUS
    )
    
    list(GET DOWNLOAD_STATUS 0 STATUS_CODE)
    if(NOT STATUS_CODE EQUAL 0)
        message(FATAL_ERROR "Failed to download Wwise SDK. Please download manually from: [https://dl.dropboxusercontent.com/scl/fi/92fdn4rhlc3eim2a5p0ox/wwise_sdk.zip?rlkey=nob090idq4yw0h6v2ehpa7j6t&dl=1]")
    endif()
    
    message(STATUS "Extracting Wwise SDK...")

    file(ARCHIVE_EXTRACT 
        INPUT "${CMAKE_BINARY_DIR}/wwise_sdk.zip"
        DESTINATION "${WWISE_SDK_DIR}"
    )
    
    message(STATUS "✓ Wwise SDK installed!")
endif()

# ============= END WWISE AUTO-DOWNLOAD =============


set(WWISE_CONFIG_DIR $<$<CONFIG:Debug>:Debug>$<$<CONFIG:Release>:Release>$<$<CONFIG:Profile>:Profile>)
set(WWISE_LIB_DIR "${WWISE_SDK_DIR}/x64_vc170/${WWISE_CONFIG_DIR}/lib")

target_compile_definitions(Engine PRIVATE 
    AK_WIN 
    WIN32 
    $<$<CONFIG:Debug>:_DEBUG>
    $<$<CONFIG:Release>:AK_OPTIMIZED>
)

target_include_directories(Engine PRIVATE BEFORE
    "${WWISE_SDK_DIR}/include"
    "${WWISE_SDK_DIR}"
    "${WWISE_SDK_DIR}/include/Common"
    "${WWISE_SDK_DIR}/include/Win32"
)

set(WWISE_IO_SOURCES
    "${WWISE_SDK_DIR}/include/Common/AkFileLocationBase.cpp"
    "${WWISE_SDK_DIR}/include/Common/AkFilePackage.cpp"
    "${WWISE_SDK_DIR}/include/Common/AkFilePackageLUT.cpp"
    "${WWISE_SDK_DIR}/include/Common/AkMultipleFileLocation.cpp"
    "${WWISE_SDK_DIR}/include/Win32/AkDefaultIOHookDeferred.cpp"
)

set_source_files_properties(${WWISE_IO_SOURCES} PROPERTIES 
    COMPILE_DEFINITIONS "UNICODE;_UNICODE"
)

target_sources(Engine PRIVATE ${WWISE_IO_SOURCES})

target_link_libraries(Engine PRIVATE 
    "${WWISE_LIB_DIR}/AkSoundEngine.lib"
    "${WWISE_LIB_DIR}/AkMemoryMgr.lib"
    "${WWISE_LIB_DIR}/AkStreamMgr.lib"
    "${WWISE_LIB_DIR}/AkSpatialAudio.lib"
    "${WWISE_SDK_DIR}/x64_vc170/${WWISE_CONFIG_DIR}/lib/CommunicationCentral.lib"
    "${WWISE_LIB_DIR}/AkRoomVerbFX.lib"
    ws2_32.lib 
    mswsock.lib 
    dinput8.lib 
    dsound.lib 
    dxguid.lib
)

